--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,8 @@
     },
     "extends": [
         "plugin:react/recommended",
-        "airbnb"
+        "airbnb",
+        "plugin:react-hooks/recommended"
     ],
     "overrides": [
     ],
@@ -35,6 +36,21 @@
             "button": true,
             "submit": true,
             "reset": false
-          }]
+          }],
+        "jsx-a11y/no-static-element-interactions": [
+            "warn",
+            {
+              "handlers": [
+                "onClick",
+                "onMouseDown",
+                "onMouseUp",
+                "onKeyPress",
+                "onKeyDown",
+                "onKeyUp"
+              ],
+              "allowExpressionValues": true
+            }
+          ],
+        "jsx-a11y/click-events-have-key-events": "warn"
     }
 }
